<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/Title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/playername"
        android:textSize="30dp"
        android:background="@drawable/custom_title"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        android:layout_margin="50dp"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/Start"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        />
    <Button
        android:id="@+id/Back"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/back"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        />
</LinearLayout>