<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_title"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/email"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:gravity="left"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="25dp" />
    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ButtonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"
        android:textAllCaps="false"/>
</RelativeLayout>
