<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/Title"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_title"
        android:text="@string/CQ"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        />
    <Button
        android:id="@+id/Start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/HighScore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Start"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/Tutorial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tutorial"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/HighScore"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/Back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Tutorial"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
</RelativeLayout>
