<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.man.learningenglish.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo" />
    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20dp"
        android:ems="15"
        android:layout_marginTop="30dp"
        android:layout_below="@id/Logo"/>
    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="15"
        android:textSize="20dp"
        android:layout_below="@id/Email"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/DangNhap"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/DangKy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>
</LinearLayout>
