<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/Title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/EQresult"
        android:background="@drawable/custom_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/Star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/KetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text=""
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        />
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/PieChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/PlayAgain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/playagain"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/Back"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
</LinearLayout>
